force-app/main/default/objects/Kickback__c/Kickback__c.object-meta.xml
<CustomObject>
    <label>Kickback</label>
    <nameField>
        <displayFormat>KB-{00000}</displayFormat>
        <label>Kickback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kickbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>