force-app/main/default/objects/Kickback__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <formula>CASE(RecordType.DeveloperName, &apos;ForVendorSupplier&apos;, &apos;Vendor/Supplier&apos;, &apos;ForAgent&apos;, &apos;Agent&apos;, &apos;ForCustomer&apos;, &apos;Customer&apos;,&apos;&apos;)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>