force-app/main/default/objects/Kickback__c/fields/AmountPaidUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidUSD__c</fullName>
    <label>Amount Paid (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>