force-app/main/default/objects/Kickback__c/fields/AmountPaidVND__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidVND__c</fullName>
    <label>Amount Paid (VND)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>