force-app/main/default/objects/Kickback__c/fields/FxRateID__c.field-meta.xml
<CustomField>
    <fullName>FxRateID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fx Rate ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FxRate__c.ExchangeRateType__c</field>
            <operation>equals</operation>
            <value>Tỷ giá trả theo KB</value>
        </filterItems>
        <filterItems>
            <field>FxRate__c.ExchangeCurrencyFrom1__c</field>
            <operation>equals</operation>
            <valueField>$Source.Currency__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FxRate__c</referenceTo>
    <relationshipLabel>Kickbacks</relationshipLabel>
    <relationshipName>Kickbacks</relationshipName>
    <type>Lookup</type>
</CustomField>