force-app/main/default/objects/Kickback__c/fields/KickbackName__c.field-meta.xml
<CustomField>
    <fullName>KickbackName__c</fullName>
    <label>Kickback Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>