force-app/main/default/objects/Kickback__c/fields/KickbackPaymentNote__c.field-meta.xml
<CustomField>
    <fullName>KickbackPaymentNote__c</fullName>
    <label>Kickback - Payment Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>