force-app/main/default/objects/Kickback__c/fields/KickbackRequester__c.field-meta.xml
<CustomField>
    <fullName>KickbackRequester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kickback Requester</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Kickbacks</relationshipLabel>
    <relationshipName>Kickbacks</relationshipName>
    <type>Lookup</type>
</CustomField>