force-app/main/default/objects/Kickback__c/fields/KickbackSettledDate__c.field-meta.xml
<CustomField>
    <fullName>KickbackSettledDate__c</fullName>
    <label>Kickback - Settled Date</label>
    <type>Date</type>
</CustomField>