force-app/main/default/objects/Kickback__c/fields/KickbackTo__c.field-meta.xml
<CustomField>
    <fullName>KickbackTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kickback To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Kickbacks</relationshipLabel>
    <relationshipName>Kickbacks</relationshipName>
    <type>Lookup</type>
</CustomField>