force-app/main/default/objects/Kickback__c/fields/PaymentConfirmedKickback__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmedKickback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Confirmed - Kickback</label>
    <type>Checkbox</type>
</CustomField>