force-app/main/default/objects/Kickback__c/fields/TotalAmountofPaymentUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofPaymentUSD__c</fullName>
    <label>Total Amount of Payment (USD)</label>
    <summarizedField>BillingKickback__c.TotalBuyingInclTaxUSD__c</summarizedField>
    <summaryForeignKey>BillingKickback__c.Kickback__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>