force-app/main/default/objects/Kickback__c/fields/TotalAmountofPaymentVND__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofPaymentVND__c</fullName>
    <label>Total Amount of Payment (VND)</label>
    <summarizedField>BillingKickback__c.TotalBuyingInclTaxVND__c</summarizedField>
    <summaryForeignKey>BillingKickback__c.Kickback__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>