force-app/main/default/objects/Kickback__c/fields/UnpaidBalanceofPaymentUSD__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceofPaymentUSD__c</fullName>
    <formula>TotalAmountofPaymentUSD__c -  AmountPaidUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Balance of Payment (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>