force-app/main/default/objects/Kickback__c/fields/UnpaidBalanceofPaymentVND__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceofPaymentVND__c</fullName>
    <formula>TotalAmountofPaymentVND__c -  AmountPaidVND__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Balance of Payment (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>