force-app/main/default/objects/Kickback__c/recordTypes/ForAgent.recordType-meta.xml
<RecordType>
    <fullName>ForAgent</fullName>
    <active>true</active>
    <label>For Agent</label>
</RecordType>