force-app/main/default/objects/Kickback__c/recordTypes/ForCustomer.recordType-meta.xml
<RecordType>
    <fullName>ForCustomer</fullName>
    <active>true</active>
    <label>For Customer</label>
</RecordType>