force-app/main/default/objects/Kickback__c/recordTypes/ForVendorSupplier.recordType-meta.xml
<RecordType>
    <fullName>ForVendorSupplier</fullName>
    <active>true</active>
    <label>For Vendor/Supplier</label>
</RecordType>